# pathfinder

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
example/monorepo/: .mcp.json  README.md  ty.toml
example/monorepo/python/: .mcp.json  config.json  main.py  pyproject.toml
example/python/: .mcp.json  README.md  config.json  pyproject.toml
example/python-and-rust/: .mcp.json  README.md  main.py
example/python-and-rust/src/: main.rs
example/rust/: .mcp.json  README.md
src/: args.rs  config.rs  documents.rs  lib.rs  lsp_bridge.rs  main.rs  service.rs  transport.rs  utils.rs
src/tools/: definition.rs  mod.rs
tests/: rust_analyzer.rs
