[package]
name = "pathfinder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rmcp = { version = "0.8.0", features = ["server", "transport-io"] }
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "signal", "io-util", "io-std", "fs", "time", "sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = { version = "2" }

[dev-dependencies]
tempfile = "3"
which = { version = "8.0.0" }
